--- a/styles.css
+++ b/styles.css
@@ -4,77 +4,223 @@
     }
   }
   
-
-  header {
-    background-color: #f0f0f0;
-    padding: 20px;
-    text-align: center;
-
-    
-    
-}
-
-nav ul {
-    list-style: none;
-    padding: 0;
-}
-
-nav li {
-    display: inline;
-    margin-right: 20px;
-}
-
-a {
-    text-decoration: none;
-    color: #333;
-    font-size: 25px;
-    font-family: Tahoma;
-    text-align:center;
   
-   
-}
+  
+  body {
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      background-color: #f5f5f5;
+      color: #333;
+  }
+  
+  #header {
+      
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+     
+      padding: 10px;
+      position: fixed;
+      width: 100%;
+      height: 100px;
+      top: 0;
+      z-index: 500;
+  }
+  
+  #nav-bar {
+      display: flex;
+      justify-content: space-around;
+      list-style: none;
+      margin: 0;
+      text-decoration: none;
+      color: black;
+  }
+  
+  .nav-link {
+      font-size: 25px;
+  }
+  
+  
+  a {
+     
+    text-decoration: none;
+      color: black; 
+      font-size: 25px;
+  }
+  
+  li {
+      display: inline;
+      text-align: center;
+      padding: 15px;
+      }
+  
+  .landing {
+      text-align: center;
+      /*margin: 50px 0;*/
+  }
+  
+  .products {
+      display: flex;
+      justify-content: space-around;
+      margin: 10px 0;
+  
+  }
+  
+  .card {
+      border: 1px solid #ccc;
+      padding: 20px;
+      
+      background-color: #e5e5e5;
+      
+  }
+  
+  .card img {
+      height: 400px;
+      width: 450px;
+  }
+  
+  .contact {
+      text-align: center;
+      margin: 100px 0;
+  }
+  
+  form {
+      display: flex;
+      flex-direction: column;
+      
+  }
+  
+  label {
+      margin-bottom: 10px;
+  }
+  
+  input, textarea {
+      margin-bottom: 20px;
+      padding: 10px;
+      border: 1px solid #ccc;
+  }
+  
+  button {
+      background-color: #333;
+      color: white;
+      padding: 10px;
+      cursor: pointer;
+  }
+  
+  button:hover {
+      background-color: #555;
+  }
+  
+  #home {
+      padding-top: 125px;
+      text-align: center;
+      font-family: 'Audiowide', sans-serif;
+      font-size: 25px;
+  }
+  
+  #header-img {
+      height: 0;
+      width: 0;
+  }
+  
+  h1 { 
+      font-size: 30px;
+  }
+  
+  #img-div {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: left;
+      gap: 40px;
+      max-width: 100%;
+      height: auto;
+      margin: 0 auto;
+      padding: 20px 10px;
+    }
+    
+    #img-div img {
+      width: 375px;
+      max-width: 100%;
+      height: auto;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+    
+    #img-div::after {
+      content: "";
+      width: 350px;
+    }
+  
+  
+  
+  
+  .container {
+      display: flex;
+      left: 400;
+      height: 300px;
+      width: 500px;
+  }
+  
+  .price {
+      font-size: 20px;
+      font-family: Tahoma;
+  }
+  
+  .cta {
+      font-weight: 900;
+      color: orangered;
+  }
+  #colored {
+      color: orangered;
+      font-size: 25px;
+  }
+  
+  .produkten {
+      opacity: 0.5;
+      display: inline-block;
+      border: 1px solid  grey;
+      padding-left: 35px;
+  }
+  
+  a span {
+      font-size: 15px;
+      font-weight: 900;
+  }
+  
+  .nav-color {
+      opacity: 0.6;
+     background: #EBEBEB;
+background: -moz-linear-gradient(45deg, #EBEBEB 0%, #F9F7FF 100%);
+background: -webkit-linear-gradient(45deg, #EBEBEB 0%, #F9F7FF 100%);
+background: linear-gradient(45deg, #EBEBEB 0%, #F9F7FF 100%);
+  }
 
-.gallery {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 16px;
-  max-width: 1400px;
-  margin: 0 auto;
-  padding: 20px 10px;
-}
-
-.gallery img {
-  width: 100%;
-  max-width: 350px;
-  height: 300px;
-  object-fit: cover;
-  border-radius: 10px;
-}
-
-.gallery::after {
-  content: "";
-  width: 350px;
-}
-
-.header-img {
-  height: 250px;
-  width: 600px;
-}
-
-#cta-message, p {
-  font-size: 30px;
-  font-family: Tahoma;
-  text-align: center;
-
-}
-
-#cta {
-  font-size: 30px;
-  font-family: Tahoma;
-  color: red;
-}
-
-
+  #video-div, video {
+     display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: left;
+      gap: 40px;
+      max-width: 100%;
+      height: auto;
+      margin: 0 auto;
+      padding: 20px 10px;
+    }
+    
+    #video img {
+   width: 375px;
+      max-width: 100%;
+      height: auto;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+    
+    #video::after {
+      content: "";
+      width: 350px;
+    }
